--- a/src/pages/home/sections/firstSection/style.css
+++ b/src/pages/home/sections/firstSection/style.css
@@ -1,3 +1,7 @@
+#home-first-section {
+  background-color: #f2f2f2;
+}
+
 #home-first-section input {
   background-color: #34337c;
   color: white;
