--- a/src/pages/home/sections/secondSection/style.css
+++ b/src/pages/home/sections/secondSection/style.css
@@ -8,3 +8,7 @@
   transform: Scale(1.05);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
 }
+
+#home-second-section {
+  background-color: #f2f2f2;
+}
