--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,7 @@
 #footer {
-  background-color: #fcfcfc;
+  background-color: #f2f2f2;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-  padding-bottom: 70px;
+  padding-bottom: 60px;
 }
 
 #footer .fa-whatsapp {
